[package]
name = "solend-liquidator"
version = "1.0.0"
edition = "2021"
authors = ["Solend Community"]
description = "Liquidation bot for Solend protocol written in Rust"
license = "ISC"

[[bin]]
name = "liquidator"
path = "src/main.rs"

[dependencies]
# Solana core
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"

# SPL Token
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Anchor (for instruction building)
anchor-lang = "0.29"

# Serialization
borsh = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Decimal arithmetic
rust_decimal = "1.33"

# Configuration
dotenv = "0.15"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Oracle integration
pyth-sdk-solana = "0.10"
switchboard-on-demand = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
bs58 = "0.5"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.33"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
